--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>Bienvenido a  {{ title }}</h1> 
+<app-nav-bar></app-nav-bar>
+
+
+<div class="container" style="margin-top: 140px;">
+    <h1>Bienvenido a  {{ title }}</h1> 
+    <ul>
+        <li *ngFor="let product of products; let i=index">{{i+1}} - {{product.name}}</li>
+    </ul>
+
+</div>
