Fin de la sección 9

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -2,9 +2,5 @@
 
 
 <div class="container" style="margin-top: 140px;">
-    <h1>Bienvenido a  {{ title }}</h1> 
-    <ul>
-        <li *ngFor="let product of products; let i=index">{{i+1}} - {{product.name}}</li>
-    </ul>
-
+    <app-shop></app-shop>
 </div>
