--- a/Client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/Client/src/app/core/nav-bar/nav-bar.component.scss
@@ -10,3 +10,22 @@
     top: -12px;
     right: 32px;
 }
+
+a {
+    text-decoration: none;
+    color: #343a40;
+
+    &.active{
+        color: orange;
+    }
+
+    &:hover{
+        text-decoration: underline;
+    }
+}
+.logo {
+    cursor: pointer;
+    &:focus{
+    outline: none;
+    }
+}
