Fin de la sección 12

--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -4,6 +4,7 @@
       <a class="p-2" [routerLink]="['/']" routerLinkActive ="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a class="p-2" routerLink="/shop"  routerLinkActive ="active">Shop</a>
       <a class="p-2" routerLink="/test-errors" routerLinkActive ="active">Errors</a>
+      <a class="p-2" routerLink="/theme" routerLinkActive ="active">Cambio tema</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
