--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,11 @@
+
+<ngx-spinner>
+    <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
 <app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
 
 
-<div class="container" style="margin-top: 140px;">
+<div>
     <router-outlet></router-outlet>
 </div>
