--- a/Client/src/app/core/test-errors/test-errors.component.html
+++ b/Client/src/app/core/test-errors/test-errors.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+
+
 <div class="row">
   <div class="col-12 d-flex justify-content-start align-items-center">
     <button class="btn btn-outline-primary ml-2" (click)="get500Error()">Test 500 Error </button>
@@ -14,4 +17,5 @@
 
   </div>
 
+</div>
 </div>
