--- a/Client/src/app/shop/product-details/product-details.component.html
+++ b/Client/src/app/shop/product-details/product-details.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 
 <div class="row" *ngIf="product">
     <div class="col-6">
@@ -5,7 +6,7 @@
     </div>
     <div class="col-6">
         <h3>{{ product.name }}</h3>
-        <p>{{product.price | currency }}</p>
+        <p style="font-size: 2em;">{{product.price | currency }}</p>
         <div class="d-flex justify-content-start align-items-center">
             <i class="fa fa-minus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
             <span class="font-weight-bold" style="font-size: 1.5em;">2</span>
@@ -20,4 +21,5 @@
         </div>
 
     </div>
+</div>
 </div>
