--- a/Client/src/app/shop/product-item/product-item.component.html
+++ b/Client/src/app/shop/product-item/product-item.component.html
@@ -1,15 +1,15 @@
 <div class="card h-100 shadow-sm">
-<img src="{{ product.pictureUrl }}" alt="{{ product.name }}" class="img-fluid bg-info" routerLink="/shop/{{ product.id }}">
+  <div class="image position-relative puntero">
+    <img src="{{ product.pictureUrl }}" alt="{{ product.name }}" class="img-fluid bg-info">
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+      <button type="button" class="btn btn-primary fa fa-shopping-cart mr-2"></button>
+      <button routerLink="/shop/{{ product.id }}" type="button" class="btn btn-primary">Ver</button>
+    </div>
+  </div>
   <div class="card-body  d-flex flex-column">
-
-    <a href="#" class="" routerLink="/shop/{{ product.id }}" >
+    <a href="#" class="" routerLink="/shop/{{ product.id }}">
       <h6 class="text-uppercase">{{ product.name }}</h6>
     </a>
     <span class="mb-2">{{ product.price  | currency }}</span>
-        <div class="btn-group justify-content-between">
-          <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-          <button routerLink="/shop/{{ product.id }}"  type="button" class="btn btn-outline-secondary">Ver</button>
-        </div>
-        <small class="text-muted">9 mins</small>
-      </div>
   </div>
+</div>
