Fin de la seccion 14

--- a/Client/src/app/shop/product-details/product-details.component.html
+++ b/Client/src/app/shop/product-details/product-details.component.html
@@ -8,10 +8,10 @@
         <h3>{{ product.name }}</h3>
         <p style="font-size: 2em;">{{product.price | currency }}</p>
         <div class="d-flex justify-content-start align-items-center">
-            <i class="fa fa-minus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
-            <span class="font-weight-bold" style="font-size: 1.5em;">2</span>
-            <i class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
-            <button class="btn btn-outline-secondary btn-lg ml-4">Añadir a la cesta</button>
+            <i (click)="decrementQuantity()" class="fa fa-minus-circle text-warning mx-2" [class.puntero]="this.quantity > 1" style="font-size: 2em;"></i>
+            <span class="font-weight-bold" style="font-size: 1.5em;">{{this.quantity}}</span>
+            <i (click)="incrementQuantity()" class="fa fa-plus-circle text-warning mx-2" style="cursor: pointer; font-size: 2em;"></i>
+            <button (click)="addItemToBasket()" [disabled]="this.quantity === 0" class="btn btn-outline-primary btn-lg ml-4" >Añadir a la cesta</button>
         </div>
     </div>
     <div class="row mt-5">
