--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -7,9 +7,9 @@
       <a class="p-2" routerLink="/theme" routerLinkActive ="active">Cambio tema</a>
     </nav>
     <div class="d-flex align-items-center">
-        <a class="position-relative">
+        <a class="position-relative" routerLink="/basket">
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <div class="cart-no">5</div>
+            <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
         </a>
         <a  class="btn btn-outline-secondary">Log In</a>
         <a  class="btn btn-outline-secondary">Sing up</a>
