--- a/Client/src/app/shop/product-item/product-item.component.html
+++ b/Client/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
   <div class="image position-relative puntero">
     <img src="{{ product.pictureUrl }}" alt="{{ product.name }}" class="img-fluid bg-info">
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button type="button" class="btn btn-primary fa fa-shopping-cart mr-2"></button>
+      <button (click)="addItemToBasket()" type="button" class="btn btn-primary fa fa-shopping-cart mr-2"></button>
       <button routerLink="/shop/{{ product.id }}" type="button" class="btn btn-primary">Ver</button>
     </div>
   </div>
