--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,17 +1,40 @@
-<div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-<img class="logo" src="/assets/images/logo.png" style="max-width: 70px;" alt="logo" [routerLink]="['/']" />
-    <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;" >
-      <a class="p-2" [routerLink]="['/']" routerLinkActive ="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-      <a class="p-2" routerLink="/shop"  routerLinkActive ="active">Shop</a>
-      <a class="p-2" routerLink="/test-errors" routerLinkActive ="active">Errors</a>
-      <a class="p-2" routerLink="/theme" routerLinkActive ="active">Cambio tema</a>
-    </nav>
-    <div class="d-flex align-items-center">
-        <a class="position-relative" routerLink="/basket">
-            <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
-        </a>
-        <a  class="btn btn-outline-secondary">Log In</a>
-        <a  class="btn btn-outline-secondary">Sing up</a>
-    </div>
+<div
+  class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
+  <img class="logo" src="/assets/images/logo.png" style="max-width: 70px;" alt="logo" [routerLink]="['/']" />
+  <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
+    <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+    <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+    <a class="p-2" routerLink="/test-errors" routerLinkActive="active">Errors</a>
+    <a class="p-2" routerLink="/theme" routerLinkActive="active">Cambio tema</a>
+  </nav>
+  <div class="d-flex align-items-center">
+    <a class="position-relative" routerLink="/basket">
+      <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
+      <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
+    </a>
+    <ng-container *ngIf="(this.curretUser$ | async) === null">
+      <a routerLink="/account/login" class="btn btn-outline-secondary">Log In</a>
+      <a routerLink="/account/register" class="btn btn-outline-secondary ml-1">Sing up</a>
+    </ng-container>
+
+    <ng-container *ngIf="this.curretUser$ | async">
+      <div class="btn-group" dropdown>
+        <button id="button-animated" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+          aria-controls="dropdown-animated">
+          Bienvenido {{( this.curretUser$ | async).displayName }} <span class="caret"></span>
+        </button>
+        <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-animated">
+          <li role="menuitem"><a class="dropdown-item" routerLink="/basket">
+              <i class="fa fa-shopping-cart mr-3"></i> View Basket
+            </a></li>
+          <li role="menuitem"><a class="dropdown-item" routerLink="/orders">
+              <i class="fa fa-history mr-3"></i>View Orders</a></li>
+          <li class="divider dropdown-divider"></li>
+          <li role="menuitem"><a class="dropdown-item puntero" (click)="logout()">
+              <i class="fa fa-sign-out mr-3"></i>Logout</a></li>
+
+        </ul>
+      </div>
+    </ng-container>
   </div>
+</div>
