--- a/Client/src/app/core/section-header/section-header.component.html
+++ b/Client/src/app/core/section-header/section-header.component.html
@@ -7,7 +7,7 @@
                         {{ bc[bc.length-1].label | titlecase}}
                     </h2>
                 </div>
-                <div class="col-3">
+                <div class="col-3 puntero">
                     <xng-breadcrumb></xng-breadcrumb>
                 </div>
             </div>
