--- a/Client/src/app/share/components/order-total/order-total.component.html
+++ b/Client/src/app/share/components/order-total/order-total.component.html
@@ -5,18 +5,18 @@
     <p class="font-italic mb-2">
         Los costes del envío se añadirán después
     </p>
-    <ul class="list-unstyled m-2" *ngIf="(basketTotal$ | async)">
+    <ul class="list-unstyled m-2" >
         <li class="d-flex justify-content-between border-bottom">
             <strong class="text-muted"> Order subtotal</strong>
-            <strong> {{(basketTotal$ | async).subTotal |currency }} </strong>
+            <strong> {{subtotal |currency }} </strong>
         </li>
         <li class="d-flex justify-content-between border-bottom">
             <strong class="text-muted"> Envío y manipulación</strong>
-            <strong> {{(basketTotal$ | async).shipping |currency }} </strong>
+            <strong> {{ shipping |currency }} </strong>
         </li>
         <li class="d-flex justify-content-between border-bottom">
             <strong class="text-muted"> Total</strong>
-            <strong> {{(basketTotal$ | async).total | currency }} </strong>
+            <strong> {{ total | currency }} </strong>
         </li>
     </ul>
 </div>
