--- a/Client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/Client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-2">
-    <app-basket-summary [isBasket]="false"></app-basket-summary>
+    <app-basket-summary [isBasket]="false" [items]="items"></app-basket-summary>
 
 </div> 
 <div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
