--- a/Client/src/app/share/components/basket-summary/basket-summary.component.html
+++ b/Client/src/app/share/components/basket-summary/basket-summary.component.html
@@ -1,34 +1,39 @@
+<ng-container *ngIf="items?.length > 0">
+
+
 <div class="table-responsive">
     <table class="table">
-        <thead>
+        <thead [class.bg-light]="isBasket || isOrder" class="border-0 py-2">
           <tr>
-            <th class="border-0" [class.bg-light]="isBasket" scope="col">
+            <th scope="col">
                 <div class="p-2 px-3 text-uppercase">Proucto</div>
             </th>
-            <th class="border-0" [class.bg-light]="isBasket" scope="col">
+            <th scope="col">
                 <div class="p-2 px-3 text-uppercase">Precio</div>
             </th>
-            <th class="border-0" [class.bg-light]="isBasket" scope="col">
+            <th scope="col">
                 <div class="p-2 px-3 text-uppercase">Cantidad</div>
             </th>
-            <th class="border-0" [class.bg-light]="isBasket" scope="col">
+            <th scope="col">
                 <div class="p-2 px-3 text-uppercase">Total</div>
             </th>
-            <th *ngIf="isBasket" class="border-0 bg-light" scope="col">
+            <th *ngIf="isBasket" scope="col">
                 <div class="p-2 px-3 text-uppercase">Borrar</div>
             </th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of (basket$ | async)?.items; let i=index">
+          <tr *ngFor="let item of items; let i=index">
             <th scope="row">
                 <div class="pb-2">
                     <img src="{{item.pictureUrl}}" alt="{{item.productName}}" class="img-fluid" style="max-height: 50px;">
                     <div class="ml-3 d-inline-block align-middle">
                         <h5 class="mb-0">
-                           <a routerLink="/shop/{{item.id}}" class="text-dark"> {{item.productName}} </a>
+                           <a *ngIf="isBasket" routerLink="/shop/{{item.id}}" class="text-dark"> {{item.productName}} </a>
+                           <a *ngIf="isOrder" routerLink="/shop/{{item.productId}}" class="text-dark"> {{item.productName}} </a>
+
                         </h5>
-                        <span class="text-muted font-weight-normal font-italic"> Tipo: {{item.type}}</span>
+                        <span *ngIf="isBasket" class="text-muted font-weight-normal font-italic"> Tipo: {{item.type}}</span>
                     </div>
                 </div>
             </th>
@@ -55,3 +60,4 @@
         </tbody>
       </table>
     </div>
+</ng-container>
