--- a/Client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/Client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -6,7 +6,7 @@
     <button type="button" cdkStepperPrevious class="btn btn-outline-primary">
         <i class="fa fa-angle-left"></i>Go to Delivery
     </button>
-    <button type="button" class="btn btn-primary" cdkStepperNext>
+    <button type="button" class="btn btn-primary" (click)="createPaymentIntent()">
         Go to Payment<i class="fa fa-angle-right"></i>
     </button>
 </div>
