--- a/Client/src/app/checkout/chekout.component.html
+++ b/Client/src/app/checkout/chekout.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-8">
 
-            <app-stepper [linearModeSelected]="false" #appStepper>
+            <app-stepper [linearModeSelected]="true" #appStepper>
                 <cdk-step [label]="'Address'" [completed]="(chekOutForm.get('addressForm')).valid">
                     <app-checkout-address (getAddress)="onGetAddress($event)" [checkOutForm]="chekOutForm">
                     </app-checkout-address>
@@ -11,7 +11,7 @@
                     <app-checkout-delivery [checkOutForm]="chekOutForm"></app-checkout-delivery>
                 </cdk-step>
                 <cdk-step [label]="'Review'">
-                    <app-checkout-review></app-checkout-review>
+                    <app-checkout-review [appStepper]="appStepper" ></app-checkout-review>
                 </cdk-step>
                 <cdk-step [label]="'Payment'">
                     <app-checkout-payment [checkOutForm]="chekOutForm"></app-checkout-payment>
