--- a/Client/src/app/share/components/stepper/stepper.component.html
+++ b/Client/src/app/share/components/stepper/stepper.component.html
@@ -1,10 +1,11 @@
 <div class="container">
     <ul class="nav nav-pills nav-justified">
         <li class="nav-item" *ngFor="let step of steps; let i = index">
-            <button (click)="onClick(i)" [disabled]="!step.completed"
+            <button (click)="onClick(i)" 
+            [disabled]="true"
                 [class.active]="selectedIndex === i"
                 class="nav-link py-3 text-uppercase font-weight-bold btn-block">
-                {{ step.label }}: {{step.completed}}
+                {{ step.label }}
             </button>
         </li>
     </ul>
