Fin de la seccion penúltima

--- a/Client/src/app/shop/shop.component.html
+++ b/Client/src/app/shop/shop.component.html
@@ -5,7 +5,9 @@
     <section class="col-3">
       <h5 class="text-warning ml-3">Brands</h5>
       <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-        <option *ngFor="let option of sortOptions" [value]="option.value">{{ option.name }}</option>
+        <option *ngFor="let option of sortOptions" 
+        [selected]="this.shopParams.sort === option.value"
+        [value]="option.value">{{ option.name }}</option>
       </select>
       <h5 class="text-warning ml-3">Brands</h5>
       <ul class="list-group my-3">
@@ -59,6 +61,7 @@
         [totalCount] ="totalCount"
         [pageSize] ="this.shopParams.pageSize"
         (pageChanged) ="onPageChanged($event)"
+        [pageNumber]="shopParams.pageNumber"
         ></app-pager>
       </div>
 
