--- a/Client/src/app/share/components/pager/pager.component.html
+++ b/Client/src/app/share/components/pager/pager.component.html
@@ -2,6 +2,7 @@
 [boundaryLinks]="true" 
 [totalItems]="totalCount"
 (pageChanged)="onPageChanged($event)" 
+[ngModel]="pageNumber"
 [itemsPerPage]="pageSize"
 previousText="&lsaquo;" 
 nextText="&rsaquo;"
